--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
     <div class="scroll-container" id="scroll-container">
       <img src="1.png" alt="Design 1" class="design">
       <img src="2.png" alt="Design 2" class="design" style="display: none;">
+      <img src="3.png" alt="Design 2" class="design" style="display: none;">
+      <img src="4.png" alt="Design 2" class="design" style="display: none;">
       <!-- Add more images here -->
     </div>
     <button class="arrow arrow-right" id="next">&rarr;</button>
